"""create vulnerability reports tables

Revision ID: 2026_03_18_2200
Revises: 2026_03_18_2143
Create Date: 2026-03-18 22:00:00.000000

"""
from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision = '2026_03_18_2200'
down_revision = '2026_03_18_2143'
branch_labels = None
depends_on = None


def upgrade():
    # Create vulnerability_reports table
    op.create_table(
        'vulnerability_reports',
        sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('report_number', sa.String(length=50), nullable=False),
        sa.Column('program_id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('researcher_id', postgresql.UUID(as_uuid=True), nullable=False),
        
        # Report content - FREQ-06
        sa.Column('title', sa.String(length=500), nullable=False),
        sa.Column('description', sa.Text(), nullable=False),
        sa.Column('steps_to_reproduce', sa.Text(), nullable=False),
        sa.Column('impact_assessment', sa.Text(), nullable=False),
        sa.Column('suggested_severity', sa.String(length=20), nullable=False),
        sa.Column('affected_asset', sa.String(length=500), nullable=True),
        sa.Column('vulnerability_type', sa.String(length=100), nullable=True),
        
        # Triage and validation - FREQ-07, FREQ-08
        sa.Column('status', sa.String(length=20), server_default='new', nullable=False),
        sa.Column('assigned_severity', sa.String(length=20), nullable=True),
        sa.Column('cvss_score', sa.Numeric(precision=3, scale=1), nullable=True),
        sa.Column('vrt_category', sa.String(length=100), nullable=True),
        
        # Triage information
        sa.Column('triaged_by', postgresql.UUID(as_uuid=True), nullable=True),
        sa.Column('triaged_at', sa.DateTime(timezone=True), nullable=True),
        sa.Column('triage_notes', sa.Text(), nullable=True),
        
        # Duplicate handling - BR-07
        sa.Column('is_duplicate', sa.Boolean(), server_default='false', nullable=False),
        sa.Column('duplicate_of', postgresql.UUID(as_uuid=True), nullable=True),
        sa.Column('duplicate_detected_at', sa.DateTime(timezone=True), nullable=True),
        
        # Disclosure timeline - BR-10
        sa.Column('acknowledged_at', sa.DateTime(timezone=True), nullable=True),
        sa.Column('remediation_deadline', sa.DateTime(timezone=True), nullable=True),
        sa.Column('resolved_at', sa.DateTime(timezone=True), nullable=True),
        sa.Column('public_disclosure_date', sa.DateTime(timezone=True), nullable=True),
        
        # Bounty information - FREQ-10
        sa.Column('bounty_amount', sa.Numeric(precision=15, scale=2), nullable=True),
        sa.Column('bounty_status', sa.String(length=20), nullable=True),
        sa.Column('bounty_approved_by', postgresql.UUID(as_uuid=True), nullable=True),
        sa.Column('bounty_approved_at', sa.DateTime(timezone=True), nullable=True),
        
        # Metadata
        sa.Column('last_activity_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
        sa.Column('submitted_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
        sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
        sa.Column('closed_at', sa.DateTime(timezone=True), nullable=True),
        
        sa.PrimaryKeyConstraint('id'),
        sa.UniqueConstraint('report_number'),
        sa.ForeignKeyConstraint(['program_id'], ['bounty_programs.id'], ondelete='CASCADE'),
        sa.ForeignKeyConstraint(['researcher_id'], ['researchers.id'], ondelete='CASCADE'),
        sa.ForeignKeyConstraint(['triaged_by'], ['staff.id']),
        sa.ForeignKeyConstraint(['duplicate_of'], ['vulnerability_reports.id']),
        sa.ForeignKeyConstraint(['bounty_approved_by'], ['users.id'])
    )
    
    # Create indexes
    op.create_index('ix_vulnerability_reports_program_id', 'vulnerability_reports', ['program_id'])
    op.create_index('ix_vulnerability_reports_researcher_id', 'vulnerability_reports', ['researcher_id'])
    op.create_index('ix_vulnerability_reports_status', 'vulnerability_reports', ['status'])
    op.create_index('ix_vulnerability_reports_severity', 'vulnerability_reports', ['assigned_severity'])
    op.create_index('ix_vulnerability_reports_submitted_at', 'vulnerability_reports', ['submitted_at'])
    op.create_index('ix_vulnerability_reports_report_number', 'vulnerability_reports', ['report_number'])
    
    # Create report_attachments table
    op.create_table(
        'report_attachments',
        sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('report_id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('filename', sa.String(length=500), nullable=False),
        sa.Column('original_filename', sa.String(length=500), nullable=False),
        sa.Column('file_type', sa.String(length=100), nullable=False),
        sa.Column('file_size', sa.Integer(), nullable=False),
        sa.Column('storage_path', sa.String(length=1000), nullable=False),
        sa.Column('is_safe', sa.Boolean(), server_default='false', nullable=False),
        sa.Column('scanned_at', sa.DateTime(timezone=True), nullable=True),
        sa.Column('uploaded_by', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('uploaded_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
        
        sa.PrimaryKeyConstraint('id'),
        sa.ForeignKeyConstraint(['report_id'], ['vulnerability_reports.id'], ondelete='CASCADE'),
        sa.ForeignKeyConstraint(['uploaded_by'], ['users.id'])
    )
    
    op.create_index('ix_report_attachments_report_id', 'report_attachments', ['report_id'])
    
    # Create report_comments table
    op.create_table(
        'report_comments',
        sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('report_id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('comment_text', sa.Text(), nullable=False),
        sa.Column('comment_type', sa.String(length=20), server_default='comment', nullable=False),
        sa.Column('is_internal', sa.Boolean(), server_default='false', nullable=False),
        sa.Column('author_id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('author_role', sa.String(length=50), nullable=False),
        sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
        sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
        sa.Column('edited', sa.Boolean(), server_default='false', nullable=False),
        
        sa.PrimaryKeyConstraint('id'),
        sa.ForeignKeyConstraint(['report_id'], ['vulnerability_reports.id'], ondelete='CASCADE'),
        sa.ForeignKeyConstraint(['author_id'], ['users.id'])
    )
    
    op.create_index('ix_report_comments_report_id', 'report_comments', ['report_id'])
    op.create_index('ix_report_comments_created_at', 'report_comments', ['created_at'])
    
    # Create report_status_history table
    op.create_table(
        'report_status_history',
        sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('report_id', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('from_status', sa.String(length=20), nullable=True),
        sa.Column('to_status', sa.String(length=20), nullable=False),
        sa.Column('change_reason', sa.Text(), nullable=True),
        sa.Column('changed_by', postgresql.UUID(as_uuid=True), nullable=False),
        sa.Column('changed_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
        
        sa.PrimaryKeyConstraint('id'),
        sa.ForeignKeyConstraint(['report_id'], ['vulnerability_reports.id'], ondelete='CASCADE'),
        sa.ForeignKeyConstraint(['changed_by'], ['users.id'])
    )
    
    op.create_index('ix_report_status_history_report_id', 'report_status_history', ['report_id'])
    op.create_index('ix_report_status_history_changed_at', 'report_status_history', ['changed_at'])


def downgrade():
    op.drop_index('ix_report_status_history_changed_at', table_name='report_status_history')
    op.drop_index('ix_report_status_history_report_id', table_name='report_status_history')
    op.drop_table('report_status_history')
    
    op.drop_index('ix_report_comments_created_at', table_name='report_comments')
    op.drop_index('ix_report_comments_report_id', table_name='report_comments')
    op.drop_table('report_comments')
    
    op.drop_index('ix_report_attachments_report_id', table_name='report_attachments')
    op.drop_table('report_attachments')
    
    op.drop_index('ix_vulnerability_reports_report_number', table_name='vulnerability_reports')
    op.drop_index('ix_vulnerability_reports_submitted_at', table_name='vulnerability_reports')
    op.drop_index('ix_vulnerability_reports_severity', table_name='vulnerability_reports')
    op.drop_index('ix_vulnerability_reports_status', table_name='vulnerability_reports')
    op.drop_index('ix_vulnerability_reports_researcher_id', table_name='vulnerability_reports')
    op.drop_index('ix_vulnerability_reports_program_id', table_name='vulnerability_reports')
    op.drop_table('vulnerability_reports')
